corrigind cpd, pmd, findbugs, duplicate e cycles. falta ainda checkstyle.